Optimise OpenAPI docs description